--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,11 @@
-version: "3.9"
+version: '3'
 services:
-  sonarqube:
-    image: "sonarqube:latest"
+    app:
+        build:
+            context: .
+            dockerfile: Dockerfile
+        ports:
+            - 3000:3000
+        volumes:
+            - '.:/var/www/html'
 
-  sonar-scanner:
-    image: "sonarsource/sonar-scanner-cli"
